--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -8,20 +8,13 @@ body {
   font-weight: 800;
 }
 
-.small-para {
+.para.small-para {     /* without `.para`, this will be overwritten by `.para` */
   font-size: 14px;
-  font-weight: 800;
 }
 
 .para {
-  font-size: 22px;
+  font-size: 52px;
 }
-
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
-} 
 
 .button {
   background-color: rgb(255, 255, 255);
@@ -29,14 +22,20 @@ body {
   font-size: 20px;
 }
 
-.child {
-  color: rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: 14px;
-}
+.button.confirm {                /* can also just use .confirm */
+  background-color: green;
+  color: white;
+  font-weight: bold;
+} 
 
 div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
+}
+
+div.child {               /* only use .child won't work, b/c the last <div> has both classes */
+  color: rgb(0, 0, 0);
+  font-weight: 800;
+  font-size: 14px;
 }
