--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
-.header  {
+.header {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -9,12 +12,19 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 8px;
+}
+
+li {
+  margin: 8px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;   /* this makes the links horizontal, otherwise the items will stack on top of each other. This overrides the default behavior of ul */
 }
+
 
 a {
   font-size: 22px;
@@ -23,3 +33,5 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+
