--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 8px;
 }
 
 .logo {
@@ -12,17 +13,17 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  margin: 8px;
 }
 
-li {
-  margin: 8px;
-}
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;   /* this makes the links horizontal, otherwise the items will stack on top of each other. This overrides the default behavior of ul */
+  gap: 8px;
+  padding: 0;   /* this removes the default padding on the ul */
+  margin: 0;   /* this removes the default margin on the ul */
+
 }
 
 
